Fix visibility for content links in oracle chat cards

--- a/src/styles/themes/ironsworn.less
+++ b/src/styles/themes/ironsworn.less
@@ -187,5 +187,9 @@
   table tr.selected {
     background-color: @text-color;
     color: @light-color;
+
+    .entity-link {
+      color: @text-color;
+    }
   }
 }
