--- a/src/styles/themes/starforged.less
+++ b/src/styles/themes/starforged.less
@@ -98,7 +98,8 @@ input.highlight:focus {
   }
 
   .clickable {
-    svg, &.svg {
+    svg,
+    &.svg {
       fill: @dark-color;
     }
 
@@ -106,7 +107,8 @@ input.highlight:focus {
       background: @dark-color;
       color: @medium-color;
 
-      svg, &.svg {
+      svg,
+      &.svg {
         fill: @dark-color;
       }
     }
@@ -120,7 +122,8 @@ input.highlight:focus {
         &.text {
           color: @text-light-color;
         }
-        svg, &.svg {
+        svg,
+        &.svg {
           fill: @medium-color;
         }
       }
@@ -131,7 +134,8 @@ input.highlight:focus {
           color: @text-light-color;
           background-color: @medium-color;
         }
-        svg, &.svg {
+        svg,
+        &.svg {
           fill: @text-light-color;
         }
       }
@@ -195,8 +199,7 @@ input.highlight:focus {
   }
 
   .dice-formula,
-  .dice-total
-  {
+  .dice-total {
     background: @dark-overlay;
     color: @text-medium-color;
     border-width: 0px;
@@ -223,6 +226,9 @@ input.highlight:focus {
   table tr.selected {
     background-color: @medium-color;
     color: @text-light-color;
-  }
 
+    .entity-link {
+      color: @text-dark-color;
+    }
+  }
 }
